--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,10 @@ function cube() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 }
+function seno() {
+var num = document.getElementById("n1");
+num.value = Math.sin(num.value);
+}
 </script>
 <style>
     .heading { color: #FF0000; }
@@ -20,5 +24,6 @@ Number:
 <input type="text" id="n1">
 <p>
 <button onclick="cube()"> x^3 </button>
+<button onclick="seno()"> sin(x) </button>
 </p>
 </body>
